--- a/HW3&4/HW3_1.Rmd
+++ b/HW3&4/HW3_1.Rmd
@@ -7,9 +7,9 @@ output: html_document
 
 #Part 1 - HW3
 ```{r message=FALSE,warning=FALSE}
-install.packages("tidyverse")
-install.packages("scatterplot3d")
-install.packages("tibble")
+#install.packages("tidyverse")
+#install.packages("scatterplot3d")
+#sinstall.packages("tibble")
 
 library(tidyverse)
 library(scatterplot3d)
@@ -65,62 +65,39 @@ text(x_t1, y_t1, pos = 4, cex = 0.6, labels = colnames(dist))
 
 
 ```{r message=FALSE,warning=FALSE}
-install.packages('factoextra')
-install.packages('cluster')
+library(data.table)
+library(ggplot2)
+library(factoextra)
 
-require(factoextra)
-require(cluster)
+f <- file.choose()
 
-data_path=file.choose()
-housing=read_excel(data_path,sheet=1)
-str(housing)
+movies1 = read.csv(f, header=FALSE,sep="|")
+colnames(movies1) = c("Title")
 
-
-
-
-
-movtable <- data.frame(movies, ratings)
-
-movtable <- na.omit(movtable)
-sc <- scale(movtable[1:nrow(movtable),2:ncol(movtable)])
-distance <- get_dist(sc)
-
-fviz_dist(distance, gradient = list(low = "#00AFBB", mid = "white", high = "#FC4E07"))
+d <- file.choose()
+moviesdata=read.table(d, header=FALSE, sep="")
 
 
-set.seed(123)
-km.res <- kmeans(sc, 4, nstart = 25)
+mdata <- data.frame(c1 = movies1,  
+                   c2 = moviesdata)
+
+distances = dist(mdata[2:100], method = "euclidean")
+
+set.seed(123) 
 
 
-fviz_cluster(km.res, data = sc,
-             palette = c("#00AFBB","#2E9FDF", "#E7B800", "#FC4E07"),
-             ggtheme = theme_minimal(),
-             main = "Partitioning Clustering Plot",
-             geom = "point")
-
-fviz_nbclust(sc, kmeans, method = "wss")
-fviz_nbclust(sc, kmeans, method = "silhouette")
+clusterMovies = hclust(distances, method = "ward.D2")
+plot(clusterMovies)
 
 
-d <- dist(sc, method = "euclidean")
+
+hc.complete=hclust(dist(moviesdata), method="complete")
+plot(hc.complete,main="Complete Linkage", xlab="", cex=.9)
 
 
-hc1 <- hclust(d, method = "complete")
+fviz_nbclust(moviesdata, kmeans, method = "silhouette")
 
-plot(hc1, cex = 0.6, hang = -1)
-
-
-hc5 <- hclust(d, method = "ward.D2" )
-
-
-sub_grp <- cutree(hc5, k = 4)
-plot(hc5, cex = 0.6)
-rect.hclust(hc5, k = 4, border = 2:5)
-
-
-res <- hcut(movtable[1:nrow(movtable),2:ncol(movtable)], k = 4, stand = TRUE)
-
-fviz_dend(res, rect = TRUE, cex = 0.5,
-          k_colors = c("#00AFBB","#2E9FDF", "#E7B800", "#FC4E07"))
-
+subgrp <- cutree(clusterMovies, k = 2)
+plot(clusterMovies)
+rect.hclust(clusterMovies , k = 2, border = 2:6)
 ```
